Fix incorrect rule name

--- a/jaffa/trunk/tabs/6_widgets.html
+++ b/jaffa/trunk/tabs/6_widgets.html
@@ -1027,7 +1027,7 @@ TODO
                             "validator": "required",
                             "message": "A URL is mandatory"
                         },
-                        "needsUrl": {
+                        "needsUrlList": {
                             "validator": "url",
                             "message": "This URL is invalid"
                         }
