Tweak to text for a TODO on unit testing

--- a/jaffa/trunk/tabs/12_testing.html
+++ b/jaffa/trunk/tabs/12_testing.html
@@ -3,6 +3,9 @@
     have it installed. FireUnit will provide you with more options for tracking
     test failures back to their original location if you are doing development,
     but you should hopefully be able to achieve something in all browsers.</p>
+<p>TODO: Eithre brute force a delay or be more intelligent in loading. The first
+ time visitors gets unit test failures... presumably as page resources have not
+  loaded yet?</p>
 <div class="well">
     <h4>Unit Testing log:</h4>
     <div class="unit-tests log-scroller">
